; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_tls13ccstest.c_watchccs_ctrl.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_tls13ccstest.c_watchccs_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32, i64, i8*)* @watchccs_ctrl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @watchccs_ctrl(i32* %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = call i32* @BIO_next(i32* %12)
  store i32* %13, i32** %11, align 8
  %14 = load i32*, i32** %11, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %28

17:                                               ; preds = %4
  %18 = load i32, i32* %7, align 4
  switch i32 %18, label %20 [
    i32 128, label %19
  ]

19:                                               ; preds = %17
  store i64 0, i64* %10, align 8
  br label %26

20:                                               ; preds = %17
  %21 = load i32*, i32** %11, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i64, i64* %8, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = call i64 @BIO_ctrl(i32* %21, i32 %22, i64 %23, i8* %24)
  store i64 %25, i64* %10, align 8
  br label %26

26:                                               ; preds = %20, %19
  %27 = load i64, i64* %10, align 8
  store i64 %27, i64* %5, align 8
  br label %28

28:                                               ; preds = %26, %16
  %29 = load i64, i64* %5, align 8
  ret i64 %29
}

declare dso_local i32* @BIO_next(i32*) #1

declare dso_local i64 @BIO_ctrl(i32*, i32, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
